[package]
name = "rusty-scheduler"
version = "0.1.0"
edition = "2018"

[dependencies]
derive_more = "0.15"
log = "0.4"
env_logger = "0.6"
failure = "0.1.5"
failure_derive = "0.1.5"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "2.33", features = ["yaml"] }
